--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,6 @@
+[MASTER]
+init-hook='import sys; sys.path.insert(0, "negrucoin")'
+
 [MESSAGES CONTROL]
 disable=raw-checker-failed,
         bad-inline-option,
