--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==22.1.0
 dill==0.3.5.1
 Django==4.1.1
 djangorestframework==3.13.1
+gunicorn==20.1.0
 iniconfig==1.1.1
 isort==5.10.1
 lazy-object-proxy==1.7.1
@@ -11,9 +12,11 @@ mccabe==0.7.0
 packaging==21.3
 platformdirs==2.5.2
 pluggy==1.0.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 py==1.11.0
 pylint==2.15.2
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
 pyparsing==3.0.9
 pytest==7.1.3
 python-dotenv==0.21.0
