--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pylint-django==2.5.3
 pylint-plugin-utils==0.7
 pyparsing==3.0.9
 pytest==7.1.3
+pytest-django==4.5.2
 python-dotenv==0.21.0
 pytz==2022.2.1
 sqlparse==0.4.2
