Using poetry instead of pip

--- a/docker/django/Dockerfile
+++ b/docker/django/Dockerfile
@@ -8,19 +8,21 @@ RUN apk --no-cache add \
     postgresql-dev \
     python3-dev \
     gcc \
-    python3-dev \
-    curl
+    curl \
+    build-base \
+    && python -m pip install --upgrade pip
 
 RUN curl -O https://raw.githubusercontent.com/vishnubob/wait-for-it/81b1373f17855a4dc21156cfe1694c31d7d1792e/wait-for-it.sh \
     && chmod +x /wait-for-it.sh
 
 WORKDIR /negrucoin
 
-COPY requirements.txt /negrucoin/
+COPY poetry.lock pyproject.toml /negrucoin/
 COPY .pylintrc /negrucoin/
 
-RUN python -m pip install --upgrade pip
-RUN python -m pip install -r requirements.txt
+RUN pip install poetry
+RUN poetry config virtualenvs.create false \
+  && poetry install $(test "$ENVIRONMENT" == production && echo "--no-dev") --no-interaction --no-ansi
 
 COPY docker /docker
 COPY negrucoin /negrucoin
