--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: unless-stopped
     container_name: negrucoin_nginx
     volumes:
-      - ./docker/nginx/nginx.conf.d:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./negrucoin/static:/django_static
     ports:
       - 80:80
