--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = "^3.9"
 Django = "^4.1.1"
 djangorestframework = "^3.14.0"
-psycopg2 = "^2.9.3"
 gunicorn = "^20.1.0"
+psycopg2-binary = "^2.9.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
