--- a/config/.env.template
+++ b/config/.env.template
@@ -5,7 +5,7 @@
 # python3 -c 'import secrets; print(secrets.token_hex(50))'
 DJANGO_SECRET_KEY=__CHANGEME__
 
-DJANGO_SETTINGS_MODULE=negrucoin.settings
+DJANGO_SETTINGS_MODULE=settings
 DJANGO_ALLOWED_HOSTS=*
 
 ### PostgreSQL ###
