--- a/docker-compose.preflight.yml
+++ b/docker-compose.preflight.yml
@@ -10,7 +10,10 @@ services:
     env_file: ./config/.env
     volumes:
       - ./negrucoin/static:/django_static
-    command: python manage.py runserver
+    command: [
+      "/wait-for-it.sh", "db:5432", "--strict", "--timeout=300", "--",
+      "/docker/django/start_server.sh"
+    ]
     depends_on:
       - db
   db:
