--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [production, development]
   pull_request:
-    branches: [master]
+    branches: [development]
 
 jobs:
   build:
