--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,5 +19,5 @@ jobs:
             cd negrucoin
             git pull origin production
             docker-compose down
-            docker-compose up --build
+            docker-compose up --build -d
             docker image prune -a -f
