NG-22: Add domain negrucoin.ru

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,9 +3,18 @@ upstream negrucoin {
 }
 
 server {
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
 
-    listen 80;
-    server_name localhost 127.0.0.1;
+server {
+    listen 443;
+    server_name negrucoin.ru localhost;
+
+    ssl on;
+    ssl_certificate /etc/nginx/ssl/negru.pem;
+    ssl_certificate_key /etc/nginx/ssl/negru.key;
 
     location / {
         proxy_pass http://negrucoin;
