--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./negrucoin/static:/django_static
+      - ./docker/nginx/negru.pem:/etc/nginx/ssl/negru.pem
+      - ./docker/nginx/negru.key:/etc/nginx/ssl/negru.key
     ports:
       - 80:80
+      - 443:443
     depends_on:
       - web
   web:
