--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,17 +4,19 @@ upstream negrucoin {
 
 server {
     listen 80 default_server;
+    server_tokens off;
     server_name _;
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443;
+    listen 443 ssl;
     server_name negrucoin.ru localhost;
 
-    ssl on;
     ssl_certificate /etc/nginx/ssl/negru.pem;
     ssl_certificate_key /etc/nginx/ssl/negru.key;
+
+    server_tokens off;
 
     location / {
         proxy_pass http://negrucoin;
