More refactor, add media, frontend interactions
First example of interaction between back & front

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -27,5 +27,11 @@ server {
 
     location /static/ {
         alias /django_static/;
+        expires 30d;
+    }
+
+    location /media/ {
+        alias /django_media/;
+        expires 30d;
     }
 }
