--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./negrucoin/static:/django_static
+      - ./negrucoin/media:/django_media
       - ./docker/nginx/negru.pem:/etc/nginx/ssl/negru.pem
       - ./docker/nginx/negru.key:/etc/nginx/ssl/negru.key
     ports:
@@ -22,7 +23,8 @@ services:
         ENVIRONMENT: production
     env_file: ./config/.env
     volumes:
-      - ./negrucoin/static:/django_static
+      - ./negrucoin/static:/negrucoin/static
+      - ./negrucoin/media:/negrucoin/media
     command: [
       "/wait-for-it.sh", "db:5432", "--strict", "--timeout=300", "--",
       "/docker/django/start_server.sh"
