--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.5"
 python-dotenv = "^0.21.1"
+django-cors-headers = "^3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
